src/test/resources/typeSystemTestModels/invalid/expressions/PrimaryThis.java
package typeSystemTestModels.invalid.expressions;

public interface PrimaryThis {

  int n = 1;
  int m = this.n;


}